package htl.leonding.rental.entity;

public class Customer {
    // TODO: add attributes
}
