package htl.leonding.rental.entity;

public class Employee {
    // TODO: add attributes
}
