package htl.leonding.rental.entity;

public class Lease {
    //TODO add attributes
}
