package htl.leonding.rental.entity;

public class Motorboat {
}
