package htl.leonding.rental.entity;

public class Payment {
    //TODO add attributes
}
