package htl.leonding.rental.entity;

public class Reservation {
    //TODO add attributes
}
