package htl.leonding.rental.entity;

public class Sailboat {
}
