package htl.leonding.rental.entity.dto;

public record BoatDTO() {
}
